<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/message_padding_start"
    android:paddingTop="@dimen/message_padding_top"
    android:paddingRight="@dimen/message_padding_right"
    android:paddingEnd="@dimen/message_padding_end"
    android:background="?attr/msgBackground"
    android:id="@+id/layOnline">
    <ImageView
        android:id="@+id/v_avatarOnline"
        android:layout_width="@dimen/avatar_width"
        android:layout_height="@dimen/avatar_height"
        android:contentDescription="@string/avatar" />

    <TextView
        android:id="@+id/v_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/v_avatarOnline"
        android:paddingLeft="5dp"
        android:text="@string/nick"
        android:textColor="?attr/nickColor"
        android:textSize="@dimen/nickSize"
        android:layout_marginTop="-5dp"
        android:fontFamily="@font/nasalization"/>

    <TextView
        android:id="@+id/statusOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="false"
        android:paddingRight="5sp"
        android:text="@string/status_online"
        android:textColor="?attr/onlineTextColor" />

    <ImageView
        android:id="@+id/v_platforma"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/v_nick"
        android:layout_toEndOf="@+id/v_avatarOnline"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:srcCompat="@drawable/xst" />

    <TextView
        android:id="@+id/v_txtPlatforma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/v_platforma"
        android:layout_toEndOf="@+id/v_platforma"
        android:text="@string/platforma"
        android:textSize="12dp"
        android:textColor="?attr/msgDateColor" />

    <TextView
        android:id="@+id/v_txtUa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/v_platforma"
        android:layout_below="@id/v_txtPlatforma"
        android:text="Platforma"
        android:textSize="10dp"
        android:textColor="?attr/msgDateColor" />

</RelativeLayout>